--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +9,23 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
+    }
+    @keyframes fade-in-out {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      10%, 90% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+    }
+    .animate-fade-in-out {
+      animation: fade-in-out 3s ease-in-out forwards;
     }
   </style>
 <script type="importmap">
